[package]
name = "amareleo-node-bft-storage-service"
version = "2.2.0"
authors = ["The Amareleo Team <amareleo@windeveloper.com>"]
description = "A storage service for the memory pool in a lite Aleo development node"
homepage = "https://amareleo.com"
repository = "https://github.com/kaxxa123/amareleo-chain"
keywords = ["aleo", "amareleo", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography", "cryptography::cryptocurrencies", "os"]
license = "Apache-2.0"
edition = "2021"

[features]
default = []
locktick = ["dep:locktick", "snarkvm/locktick"]
memory = ["parking_lot", "tracing"]
persistent = []
test = ["memory"]
test_targets = ["snarkvm/test_targets"]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.indexmap]
version = "2.1"
features = ["serde", "rayon"]

[dependencies.locktick]
version = "0.3"
features = ["parking_lot"]
optional = true

[dependencies.lru]
version = "0.12.1"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.snarkvm]
workspace = true

[dependencies.amareleo-chain-tracing]
path = "../../../tracing"
version = "=2.2.0"

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies.snarkvm]
workspace = true
features = ["test"]
